# clay-calculator

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
ClayCalculator/: ClayCalculator.cpp  ClayCalculator.h  ReportGenerator.cpp  ReportGenerator.h  ResultValidator.cpp  ResultValidator.h  main.cpp
src/: ClayCalculator.cpp  ClayCalculator.h  Determination.h  ExcelManager.cpp  ExcelManager.h  Exceptions.h  ReportGenerator.cpp  ReportGenerator.h  ResultValidator.cpp  ResultValidator.h  XLSXmanager.cpp  XLSXmanager.h  main.cpp
tests/: test_main.cpp
